[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "google_token_auth"
dependencies = [
  "google-api-core~=2.11.0",
  "google-api-python-client~=2.86.0",
  "google-auth~=2.17.3",
  "google-auth-httplib2~=0.1.0",
  "google-auth-oauthlib~=1.0.0",
  "googleapis-common-protos~=1.59.0"
]
version = "0.0.1"
authors = [
  { name="William Norris", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]